--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,23 +1,25 @@
-html,body,h1,h2,h3,h4,h5,h6,p {
-    margin: 0;
+@font-face {
+	font-family: nunito;
+	src: url('/fonts/nunito.ttf');
+}
+
+html, body, h1, h2, h3, h4, h5, h6, p {
+	margin: 0;
 }
 
 :root {
-    --backgroundColor: #16181c;
-    --textColor: #b0bac5;
-    --fontFamily: nunito;
-    --cardColor:#26292f;
-    --action: #5A8DEE;
-    --shadow: #0000005A;
-}
+	--backgroundColor:	#16181c;
+	--textColor:		#b0bac5;
+	--cardColor:		#26292f;
+	--action: 			#5A8DEE;
+	--shadow:			#0000005A;
 
-@font-face {
-    font-family: nunito;
-    src: url('/public/fonts/nunito.ttf');
+	--fontFamily: nunito;
 }
 
 html {
-    font-family: var(--fontFamily);
-    color: var(--textColor);
-    background-color: var(--backgroundColor);
+	font-family: var(--fontFamily);
+
+	color: var(--textColor);
+	background-color: var(--backgroundColor);
 }
